# Genetic_algorithm_for_UCTP

./: .travis.yml  CMakeLists.txt  README.md  doxycfg
documentation/html/: annotated.html  auxiliary_8hpp_source.html  classes.html  classgenalg_1_1ChromosomeAuditory-members.html  classgenalg_1_1ChromosomeAuditory.html  classgenalg_1_1ChromosomeAuditory__coll__graph.dot  classgenalg_1_1ChromosomeTime-members.html  classgenalg_1_1ChromosomeTime.html  classgenalg_1_1ChromosomeTime__coll__graph.dot  classgenalg_1_1Gen-members.html  classgenalg_1_1Gen.html  classgenalg_1_1IChromosome-members.html  classgenalg_1_1IChromosome.html  classgenalg_1_1IChromosome__inherit__graph.dot  classgenalg_1_1IRule-members.html  classgenalg_1_1IRule.html  classgenalg_1_1IRule__inherit__graph.dot  classgenalg_1_1Individual-members.html  classgenalg_1_1Individual.html  classgenalg_1_1Population-members.html  classgenalg_1_1Population.html  classgenalg_1_1PopulationObserver-members.html  classgenalg_1_1PopulationObserver.html  classgenalg_1_1PopulationTransformation-members.html  classgenalg_1_1PopulationTransformation.html  classgenalg_1_1sameAuditorySameTime-members.html  classgenalg_1_1sameAuditorySameTime.html  classgenalg_1_1sameAuditorySameTime__inherit__graph.dot  classgenalg_1_1sameGroupMoreBlock-members.html  classgenalg_1_1sameGroupMoreBlock.html  classgenalg_1_1sameGroupMoreBlock__inherit__graph.dot  classgenalg_1_1sameTeacherMoreBlock-members.html  classgenalg_1_1sameTeacherMoreBlock.html  classgenalg_1_1sameTeacherMoreBlock__coll__graph.dot  dir_0168f04cc7dcc5a05437b4fd37c598b1.html  dir_5a30104352ef4255dc24354b02eb2d20.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  files.html  functions.html  functions_func.html  (+17 more)
documentation/latex/: annotated.tex  classgenalg_1_1Gen.tex  (+22 more)
lib/: CMakeLists.txt
lib/include/: auxiliary.hpp  geneticAlgorithm.hpp  geneticRules.hpp  geneticStructure.hpp  geneticTransformations.hpp
lib/source/: auxiliary.cpp  geneticAlgoritm.cpp  geneticRules.cpp  geneticStructure.cpp  geneticTransformations.cpp
prog/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  tests.cpp
(+17 files in other folders)
